# Unnatam

./: pyproject.toml
.claude/: settings.local.json
memory/: MEMORY.md  project_architecture_decisions.md  project_hardware.md  project_unnatam.md  reference_ahamv2.md  user_profile.md
paper/: checklist.tex  main.tex  references.bib
paper/sections/: 00_abstract.tex  01_intro.tex  02_related.tex  03_architecture.tex  04_intracellular.tex  05_hormone.tex  06_experiments.tex  07_analysis.tex  08_conclusion.tex  09_appendix.tex
runs/default/: train.jsonl
scripts/: compare_ia_vs_base.sh  extract_hormones.py  inspect_ia_gates.sh  make_paper_plots.py  prepare_data.py  run_ablations.sh  run_all_evals.sh  run_all_evals_parallel.sh  run_evals.py  run_hr_forced.sh  run_ia_full.sh  run_overnight.sh  setup_new_rig.sh  train.py
tests/: test_hormones.py  test_smoke.py  test_training.py
unnatam/: __init__.py  config.py
unnatam/benchmarks/: eval.py
unnatam/hormones/: definitions.py  extract.py
unnatam/model/: __init__.py  attention.py  block.py  hormone.py  mlp.py  norm.py  ssm.py  unnatam.py
unnatam/training/: checkpoint.py  data.py  loop.py  optim.py
